Important git aliases and other things