@@ -1,6 +1,29 @@
--Xms128m
--Xmx750m
--XX:MaxPermSize=350m
--XX:ReservedCodeCacheSize=240m
--XX:+UseCompressedOops
+-Dfile.encoding=UTF-8
+-Djava.net.preferIPv4Stack=true
+-Djsse.enableSNIExtension=false
+-Xverify:none
+-Xbootclasspath/a:../lib/boot.jar
+-server
+-Xms1024m
+-Xmx4096m
+-XX:NewSize=128m
+-XX:MaxNewSize=128m
+-XX:SoftRefLRUPolicyMSPerMB=50
+-XX:+UseParNewGC
+-XX:ParallelGCThreads=4
+-XX:MaxTenuringThreshold=1
+-XX:SurvivorRatio=8
+-XX:+UseCodeCacheFlushing
+-XX:+UseConcMarkSweepGC
+-XX:+AggressiveOpts
+-XX:+CMSClassUnloadingEnabled
+-XX:+CMSIncrementalMode
+-XX:+CMSIncrementalPacing
+-XX:+CMSParallelRemarkEnabled
+-XX:CMSInitiatingOccupancyFraction=65
+-XX:+CMSScavengeBeforeRemark
+-XX:+UseCMSInitiatingOccupancyOnly
+-XX:ReservedCodeCacheSize=64m
+-XX:-TraceClassUnloading
+-Dsun.io.useCanonCaches=false
 -Dawt.useSystemAAFontSettings=on
